@@ -2,28 +2,34 @@ package com.example.jamjam.Service;
 
 import com.example.jamjam.DTO.PostRequestDTO;
 import com.example.jamjam.DTO.PostResponseDTO;
+import com.example.auth.user.Member;
 import com.example.jamjam.Entity.Post;
 import com.example.jamjam.Entity.PostMedia;
+import com.example.auth.user.MemberRepository;
 import com.example.jamjam.Repository.PostRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
-
+import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class PostService {
     private final PostRepository postRepository;
+    private final MemberRepository memberRepository;   // ✅ authorId → Member 조회용
 
+    @Transactional
     public PostResponseDTO createPost(PostRequestDTO dto) {
+        Member author = memberRepository.findById(dto.getAuthorId())
+                .orElseThrow(() -> new RuntimeException("Member not found"));
+
         Post post = Post.builder()
-                .authorId(dto.getAuthorId())
+                .author(author)                         // ✅ Member 세팅
                 .board(dto.getBoard())
                 .title(dto.getTitle())
                 .body(dto.getBody())
@@ -39,13 +45,12 @@ public class PostService {
                                     .sortOrder(1)
                                     .post(post)
                                     .build()
-                            ).collect(Collectors.toList())
+                            ).toList()
             );
         }
 
         Post saved = postRepository.save(post);
-
-        return toDto(saved);
+        return PostResponseDTO.fromEntity(saved);
     }
 
     public Page<PostResponseDTO> getPosts(String board, int page, int size) {
@@ -56,25 +61,12 @@ public class PostService {
         } else {
             posts = postRepository.findByBoard(board, pageable);
         }
-        return posts.map(this::toDto);
+        return posts.map(PostResponseDTO::fromEntity);
     }
 
     public PostResponseDTO getPostDetail(Long id) {
         Post post = postRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Post not found"));
-        return toDto(post);
-    }
-
-    private PostResponseDTO toDto(Post post) {
-        return PostResponseDTO.builder()
-                .postId(post.getPostId())
-                .title(post.getTitle())
-                .body(post.getBody())
-                .board(post.getBoard())
-                .authorId(post.getAuthorId())
-                .createdAt(post.getCreatedAt())
-                .mediaUrls(post.getMedia() == null ? List.of() :
-                        post.getMedia().stream().map(PostMedia::getFileUrl).toList())
-                .build();
+        return PostResponseDTO.fromEntity(post);
     }
 }
